--- a/home.html
+++ b/home.html
@@ -5,14 +5,14 @@
 	<title>移动边缘CDN缓存协作系统</title>
 </head>
 <body>
-  <link href="./console.css" rel="stylesheet">
+  <link href="./css/console.css" rel="stylesheet">
   <link href="./bootstrap/bootstrap.min.css" rel="stylesheet">
   <link href="./vis/vis.min.css" rel="stylesheet">
 
   <script src="./jquery/jquery.min.js"></script>
   <script src="./bootstrap/bootstrap.min.js"></script>
   <script src="./vis/vis.min.js"></script>
-  <script src="./console.js"></script>
+  <script src="./js/console.js"></script>
 <div class="jumbotron text-center" style="margin-bottom:0">
   <h1>移动边缘CDN缓存协作系统</h1>
   <p>WSPN实验室 北京邮电大学</p> 
