--- a/resources.html
+++ b/resources.html
@@ -5,13 +5,13 @@
 	<title>移动边缘CDN缓存协作系统</title>
 </head>
 <body>
-  <link href="./resource.css" rel="stylesheet">
+  <link href="./css/resource.css" rel="stylesheet">
   <link href="./bootstrap/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="./thumbnail-gallery.css">
+	<link rel="stylesheet" href="./css/thumbnail-gallery.css">
 
   <script src="./jquery/jquery.min.js"></script>
   <script src="./bootstrap/bootstrap.min.js"></script>
-  <script src="./resource.js"></script>
+  <script src="./js/resource.js"></script>
 
 
 <div class="jumbotron text-center" style="margin-bottom:0">
@@ -42,7 +42,7 @@
     <div class="tz-gallery" id="gallery">
       <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
-          <img src="./1.jpg" alt="1" width="100%">
+          <img src="./thumbnails/img001.jpg" alt="1" width="100%">
           <div class="caption">
               <h3>内容名：</h3>
               <p align="left">缓存位置：<span></span></p>
@@ -50,7 +50,7 @@
               <div class="progress">
                   <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 73%" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-              <div width="100%" class="no_cache"></div>
+              <div class="no_cache"></div>
           </div>
 
         </div>
